--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,9 +25,12 @@
 }
 
 .container-form {
-  margin: 0px auto;
-  max-width: 400px;
-  padding-bottom: 100px;
+  /* margin: 0px auto; */
+  width: 300px;
+  /* padding-bottom: 100px; */
+  margin-top: 20px;
+  margin-left: 0px;
+  margin-bottom: 20px;
 }
 
 a {
@@ -130,3 +133,4 @@ a {
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
